--- a/index.html
+++ b/index.html
@@ -1,15 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.scss">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/variables.scss">
+    <title>Easybank - Landing Page</title>
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="assets/logo.svg" alt="logo">
+            </div>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Careers</a>
+                </li>
+            </ul>
+            <div class="nav-button">
+                <button>Request Invite</button>
+            </div>
+        </nav>
+        <section class="banner-container">
+            <section class="banner-text">
+                <h1 class="main-title">Next generation<br>digital banking</h1>
+                <p class="banner-paragraph">Take your financial life online. Your Easybank account<br>will be a
+                    one-stop-shop for spending, saving, budgeting,<br>investing, and much more.</p>
+                <button class="banner-btn">Request Invite</button>
+            </section>
+            <section class="banner-img">
+                <img src="assets/image-mockups.png" alt="">
+            </section>
+        </section>
+    </header>
+    <main>
+        <section class="hero">
+            <h2 class="hero-title">Why choose Easybank?</h2>
+            <p class="hero-text">We leverage Open Banking to turn your bank account into your financial hub.<br>Control
+                your finances like never before.</p>
+            <section class="card-grid">
+
+            </section>
+        </section>
+        <section class="articles">
+            <h4 class="article-title">Latest Articles</h4>
+            <section class="grid-container">
+                <section class="card">
+                    <section class="card-image">
+                        <img src="assets/image-currency.jpg" alt="">
+                    </section>
+                    <section class="card-content">
+                        <p>By Claire Robinson</p>
+                        <h5>Receive money in any currency with no fees</h5>
+                        <p>The world is getting smaller and<br>we’re becoming more mobile. So<br>why should you be
+                            forced to only<br>receive money in a single </p>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="card-image">
+                        <img src="assets/image-restaurant.jpg" alt="">
+                    </section>
+                    <section class="card-content">
+                        <p>By Wilson Hutton </p>
+                        <h5>Treat yourself without worrying about money</h5>
+                        <p>Our simple budgeting feature<br>allows you to separate out your<br>spending and set realistic limits<br>each month. That means you …</p>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="card-image">
+                        <img src="assets/image-plane.jpg" alt="">
+                    </section>
+                    <section class="card-content">
+                        <p>By Wilson Hutton</p>
+                        <h5>Take your Easybank card wherever you go</h5>
+                        <p>We want you to enjoy your travels.<br>This is why we don’t charge any<br>fees on purchases while you’re<br>abroad. We’ll even show you … </p>
+                    </section>
+                </section>
+                <section class="card">
+                    <section class="card-image">
+                        <img src="assets/image-confetti.jpg" alt="">
+                    </section>
+                    <section class="card-content">
+                        <p>By Claire Robinson</p>
+                        <h5>Our invite-only Beta accounts are now live</h5>
+                        <p>After a lot of hard work by the<br>whole team, we’re excited to launch<br>our closed beta. It’s easy to request<br>an invite through the site ...</p>
+                    </section>
+                </section>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <footer class="footer-container">
+            <img src="assets/logo.svg" alt="">
+            <img src="assets/icon-facebook.svg" alt="">
+            <img src="assets/icon-youtube.svg" alt="">
+            <img src="assets/icon-twitter.svg" alt="">
+            <img src="assets/icon-pinterest.svg" alt="">
+            <img src="assets/icon-instagram.svg" alt="">
+        </footer>
+        <footer class="first-links">
+            <p>About</p>
+            <p>Contact</p>
+            <p>Blog</p>
+        </footer>
+        <footer class="second-links">
+            <p>Careers</p>
+            <p>Support</p>
+            <p>Privacy Policy</p>
+        </footer>
+        <footer class="footer-btn">
+            <button>Request Invite</button>
+        </footer>
+    </footer>
     <script src="script/script.js"></script>
 </body>
+
 </html>
